abstract fhir conversion from submission